--- a/css/index.css
+++ b/css/index.css
@@ -261,7 +261,7 @@ header {
   display: grid;
   margin: 0 auto;
   grid-template-columns:repeat(10, 1fr);
-  grid-template-rows:repeat(15, 90px);
+  grid-template-rows:repeat(20, 90px);
   gap: 1rem;
   width: 100%;
   max-width: 1700px;
@@ -302,6 +302,10 @@ header {
 .gallery-img.img5 {
   grid-row: 11 / span 3;
   grid-column: 1 / span 4;
+}
+.gallery-img.img6 {
+  grid-row: 15 / span 5;
+  grid-column: 3 / span 7;
 }
 
 /*-----Contact me section-----*/
