--- a/calendar/calendar.css
+++ b/calendar/calendar.css
@@ -1,9 +1,9 @@
 * {padding:0; border:0; margin:0; box-sizing:border-box;}
 
-body{
+body {
   color: #eee;
   font-size: 16px;
-  background: linear-gradient(140deg, rgb(22 40 52), rgb(153 191 219));
+  background: linear-gradient(140deg, rgb(24, 24, 24), rgb(78, 78, 78));
   background-repeat: no-repeat;
   height: 100vh;
 }
@@ -36,15 +36,15 @@ a { text-decoration:none; }
   width: 300px;
   height: 45px;
   padding:10px;
-  background: #243642;
-  color: #eee;
+  background: #ddd;
+  color: #111;
   border-radius: 5px;
-  box-shadow: 3px 3px 10px #141f25;
+  box-shadow: 3px 3px 18px 5px #1f1f1f;
 }
 
 .datepicker-input:hover {
   cursor: pointer;
-  background: #3b596d;
+  background: #eee;
 }
 
 .datepicker-input:focus  {
@@ -52,9 +52,10 @@ a { text-decoration:none; }
 }
 
 .input-wrap svg {
+  pointer-events: none;
   position: absolute;
   right: 5px;
-  fill: #eee;
+  fill: #111;
 }
 
 .datepicker-form {
@@ -132,19 +133,16 @@ a { text-decoration:none; }
   color:white;  
 }
 
-.hide {
-  display: none;
-}
+.hide { display: none; }
 
-.show {
-  display: grid;
-}
+.show { display: grid; }
 
-.not-current-month {color:#999;}
+.not-current-month { color:#999; }
 
 .highlight-from, .highlight-to {
   position: relative;
-  background:#74b5e3; color:black;
+  background:#74b5e3; 
+  color:black;
 }
 
 .highlight-from::after {
