--- a/holocard/styles.css
+++ b/holocard/styles.css
@@ -1,115 +1,76 @@
-* {
-  padding: 0;
-  margin: 0;
-  border: 0;
-  box-sizing: border-box;
+/*-----Adam Demol 2022-----*/
+:root {
+  line-height: 1.5;
+  font-size: 16px;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+* { margin: 0px; padding: 0px; border: 0px; box-sizing: border-box; }
+*::before, *::after { box-sizing: border-box; }
+html { scroll-behavior: smooth; }
 
 body {
-  font-size: 10px;
+  min-height: 100vh;
+  background-color: #222;
+  color: #eee;
+}
+
+.link {
+  display: block;
   width: 100%;
-  height: 100vh;
-  display: grid;
-  align-content: center;
+  color: white;
+  font-size: 1.2rem;
+  text-align: center;
+  margin: 50px 0;
+}
+
+.perspective {
+  display: flex;
   justify-content: center;
+  perspective: 900px;
+}
+
+.card-wrapper {
   position: relative;
-  touch-action: none;
-}
-
-h1 {
-  margin: 3rem 0;
-}
-
-img {
-  position: absolute;
-  height: inherit;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-.image {
-  position: absolute;
-  display: block;
-  width: 435px;
-  height: 300px;
-  margin-top: 30px;
-  justify-self: center;
-}
-
-.card-wrap {
-  perspective: 1000px;
-}
-
-.card-rotate {
-  display: grid;
   transform-style: preserve-3d;
-  position: relative;
-  width: 322px;
-  aspect-ratio: 362/512;
-  border-radius: 10px;
-}
-
-.cardback {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  background: url(./pokemoncardback.png);
-  background-size: cover;
-  transform: rotate3d(0,1,0, 180deg) translate3d(0, 0, 1px);
-}
-
-.gradient, .gradient::after {
-  --space: 20%;
-  --x: ;
-  --y: ;
-  backface-visibility: hidden;
-  mix-blend-mode:soft-light;
-  border-radius: 10px;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background:
-    radial-gradient(circle at 58% 45%, 
-    #00ff5a calc(var(--space)*1), 
-    #00c4ff calc(var(--space)*2), 
-    #00ffd2 calc(var(--space)*3), 
-    #7c00ff calc(var(--space)*4), 
-    #00ff5a calc(var(--space)*5), 
-    #00b8ff calc(var(--space)*6)), 
-    radial-gradient(circle at 58% 45%, 
-    #00ceff 13%, 
-    #28ff00 18%, 
-    #ec00ff 30%, 
-    #005aff 45%, 
-    #1bff00 51%);
-  background-blend-mode: difference;
-  background-size: 300%, 300%;
-  background-position: center;
-  filter: brightness(.4) contrast(1.5) saturate(5);
-}
-
-.gradient::before {
-  content: "";
-  background:  url(bg.jpg);
-  background-size: 100%;
-  background-position: var(--y) var(--x);
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  mix-blend-mode: color-dodge;
-  border-radius: 10px;
-}
-
-.gradient::after {
-  content: "";
-  mix-blend-mode: saturation;
-}
-
-.bg {
   display: block;
-  background: url(./gyarados.jpg);
+  width: 439px;
+  height: 613px;
+  background: url(/gyarados.webp);
+  background-position: center;
   background-size: cover;
+  transition: 500ms cubic-bezier(.23,.73,.46,1.05);
+  box-shadow: 0px 0px 15px 2px rgb(14, 14, 14);
+  border-radius: 23px;
+}
+
+.card-wrapper:hover {
+  transform: rotate3d(0,1,0,20deg);
+  box-shadow: -20px 0px 20px 5px rgb(14, 14, 14);
+}
+
+.card-wrapper::before {
+  display: block;
+  content: "";
   width: 100%;
   height: 100%;
-  backface-visibility: hidden;
+}
+
+.card-wrapper:hover > .large {
+  opacity: 1;
+  transform: translate3d(-10px, 0, 50px) rotate3d(0,1,0,-5deg);
+}
+
+.large {
+  opacity: 0;
+  display: block;
+  position: absolute;
+  top: 5px;
+  left: -76px;
+  width: 711px;
+  height: 526px;
+  background: url(/gyarados-large.webp);
+  background-size: contain;
+  background-repeat: no-repeat;
+  transition: 500ms cubic-bezier(.23,.73,.46,1.05);
 }
