--- a/calendar/calendar.css
+++ b/calendar/calendar.css
@@ -79,7 +79,7 @@ a { text-decoration:none; }
   translate: 50%;
   width:fit-content;
   text-align:center;
-  box-shadow: 3px 3px 15px #182a36;
+  box-shadow: 3px 3px 15px #161616;
 }
 
 .datepicker-dates {
