--- a/css/index.css
+++ b/css/index.css
@@ -3,16 +3,13 @@
   line-height: 1.5;
   font-size: 16px;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  --text-primary:#fff;
-  --text-secondary: #e9e9e9;
+  --text-primary:#eee;
   --theme-lightBlue: #18c1ff;
   --theme-pink:#f04997;
   --theme-orange: #f0a926;
   --nav-bg:#1f1f1f;
   --bg-primary: #2b2d2e;
   --bg-secondary: #131313;
-  --bg-bubble: #2b2b2b;
-  --shadow: #111;
 }
 
 /* remove default styles from everything */
@@ -33,7 +30,7 @@ a {
 }
 a:hover { color:var(--theme-orange); }
 
-h1 { font-size:4rem; margin-bottom: 4rem; text-align: center; }
+h1 { font-size:4rem; padding: 5rem 0; text-align: center; }
 h2 { font-size:2rem; }
 h3 { font-size:1.5rem; }
 
@@ -45,7 +42,7 @@ h3 { font-size:1.5rem; }
   background: var(--nav-bg);
   width: 5rem;
   height: 100vh;
-  box-shadow: 0px 3px 7px var(--shadow);
+  box-shadow: 0px 3px 7px #111;
   z-index: 999;
 }
 
@@ -70,7 +67,7 @@ h3 { font-size:1.5rem; }
   position: absolute;
   top: 15px;
   left: 4rem;
-  background: var(--bg-bubble);
+  background: var(--bg-primary);
   justify-content: center;
   color:#fff;
   width: 130px;
@@ -107,7 +104,7 @@ h3 { font-size:1.5rem; }
 
 .nav-item:hover { 
   background-color: var(--theme-pink);
-  background: linear-gradient(90deg, var(--theme-pink), var(--theme-orange)); 
+  background: linear-gradient(90deg, var(--theme-pink), var(--theme-orange) 70%); 
 }
 .nav-link svg { width: 2.7rem; }
 .nav-link .resume {
@@ -135,7 +132,7 @@ header {
   font-family: 'Courgette', serif;
   font-weight: bolder;
   text-align: center;
-  text-shadow: 5px 5px 5px black;
+  text-shadow: 5px 5px 5px #111;
 }
 
 /*-----Main Body section-----*/
@@ -143,7 +140,7 @@ header {
 .content-wrap { margin-left: 5rem; }
 
 .content-section {
-  padding: 3rem;
+  padding: 0 3rem 3rem 3rem;
   display: grid;
   place-content: center;
 }
@@ -152,9 +149,8 @@ header {
 
 .content-section.about {
   min-height: 100vh;
-  display: flex;
-  gap: 3rem;
-  place-items: center;
+  display: grid;
+  align-content: center;
   transition: all 700ms ease-in-out;
   transform: translateX(-40vw);
   opacity: 0;
@@ -181,6 +177,7 @@ header {
 }
 
 .project-card {
+  font-size: 1.1rem;
   position: relative;
   display: flex;
   gap: 1rem;
@@ -188,13 +185,13 @@ header {
   width: 100%;
   min-width: 300px;
   max-width: 1000px;
-  padding: 1.5rem;
+  padding: 5rem 3rem;
   background: linear-gradient(90deg, var(--bg-primary), var(--bg-secondary));
   transition: all 700ms cubic-bezier(.45,1.5,.67,.85);
   transform: translateX(-80%);
   opacity: 0;
   overflow: hidden;
-  box-shadow: inset 6px 7px 10px 3px #1d1d1d;
+  box-shadow: inset 6px 7px 10px 3px #111;
 }
 
 .project-card .left {
@@ -233,7 +230,7 @@ header {
   background: unset;
   border: 3px solid var(--theme-pink);
   border-radius: 5px;
-  transition: transform 200ms ease;
+  transition: 200ms ease-in-out;
 }
 
 .project-btn a {
@@ -245,6 +242,7 @@ header {
 .project-btn:hover {
   background: var(--theme-pink);
   transform: scale(1.1);
+  box-shadow: 5px 0 10px #111;
 }
 .project-btn a, 
 .project-btn a:hover, 
@@ -253,7 +251,7 @@ header {
 /*-----Gallery section-----*/
 
 .design-gallery {
-  padding: 5rem 2rem;
+  padding: 0 3rem 3rem 3rem;
   background: linear-gradient(0deg, rgb(34, 34, 34), #090909);
 }
 
