--- a/css/index.css
+++ b/css/index.css
@@ -32,7 +32,7 @@ a:hover { color:var(--theme-orange); }
 
 h1 { font-size:4rem; padding: 5rem 0; text-align: center; }
 h2 { font-size:2rem; }
-h3 { font-size:1.5rem; }
+h3 { font-size:1.2rem; }
 
 /*-----Navigation bar-----*/
 
@@ -185,7 +185,7 @@ header {
   width: 100%;
   min-width: 300px;
   max-width: 1000px;
-  padding: 5rem 3rem;
+  padding: 4rem 3rem;
   background: linear-gradient(180deg, #212121 50%, transparent);
   transition: all 700ms cubic-bezier(.45,1.5,.67,.85);
   transform: translateY(80%);
@@ -214,7 +214,7 @@ header {
 
 .project-card .right {
   display: grid;
-  gap: .5rem;
+  gap: 1rem;
   padding: 1rem;
   width: 100%;
 }
