--- a/css/index.css
+++ b/css/index.css
@@ -122,18 +122,18 @@ header {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  display: flex;
 }
 
 .header-text {
-  height: max-content;
+  text-align: center;
   width: 100%;
-  font-size: 4.5rem;
   font-family: 'Courgette', serif;
   font-weight: bolder;
-  text-align: center;
   text-shadow: 5px 5px 5px #111;
 }
+
+.header-text :nth-child(1) { font-size: 6rem; }
+.header-text :nth-child(2) { font-size: 4rem; }
 
 /*-----Main Body section-----*/
 
