--- a/css/media-small.css
+++ b/css/media-small.css
@@ -24,6 +24,9 @@
     margin-left: 0px;
   }
 
+  .header-text :nth-child(1) { font-size: 4rem; }
+  .header-text :nth-child(2) { font-size: 2.5rem; }
+
   .sticky-wrapper {
     top: 80px;
     padding-top: 10px;
