--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@
 :root {
   line-height: 1.5;
   font-size: 16px;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Raleway', sans-serif;
   --text-primary:#eee;
   --theme-lightBlue: #18c1ff;
   --theme-pink:#f04997;
@@ -57,8 +57,8 @@ h3 { font-size:1.2rem; }
   position: relative;
 }
 
-.nav-link:visited { color: var(--text-primary); }
-.nav-link:hover { color: var(--bg-secondary); }
+.nav-link:visited { color: white; }
+.nav-link:hover { color: white; }
 
 .link-text {
   opacity: 0;
@@ -67,13 +67,11 @@ h3 { font-size:1.2rem; }
   position: absolute;
   top: 15px;
   left: 4rem;
-  background: var(--bg-primary);
+  background: var(--nav-bg);
   justify-content: center;
   color:#fff;
   width: 130px;
   padding: .8rem;
-  border-radius:7px;
-  box-shadow: 3px 3px#fff;
   transition: all 400ms ease;
 }
 
@@ -85,7 +83,7 @@ h3 { font-size:1.2rem; }
   width: 0; height: 0;
   border-top: 8px solid transparent;
   border-bottom: 8px solid transparent;
-  border-right: 8px solid var(--bg-bubble);
+  border-right: 8px solid var(--bg-primary);
   top: 15px; left: -8px;
   transition: opacity 200ms ease;
 }
@@ -104,7 +102,6 @@ h3 { font-size:1.2rem; }
 
 .nav-item:hover { 
   background-color: var(--theme-pink);
-  background: linear-gradient(90deg, var(--theme-pink), var(--theme-orange) 70%); 
 }
 .nav-link svg { width: 2.7rem; }
 .nav-link .resume {
@@ -118,7 +115,7 @@ header {
   align-items: center;
   margin-left: 5rem;
   height:100vh;
-  background-image: url(../img/header-bg.webp);
+  background-image: url(../img/bg2.webp);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -127,7 +124,6 @@ header {
 .header-text {
   text-align: center;
   width: 100%;
-  font-family: 'Courgette', serif;
   font-weight: bolder;
   text-shadow: 5px 5px 5px #111;
 }
@@ -233,7 +229,6 @@ header {
   transform: translateY(80%);
   opacity: 0;
   overflow: hidden;
-  border-radius: 20px;
 }
 
 .project-card .left {
@@ -373,7 +368,6 @@ header {
 }
 
 .fa-github::after, .fa-linkedin::after, .fa-windows::after {
-  opacity: 0;
   color: white;
   transition: opacity 300ms ease-in;
   position: absolute;
@@ -387,10 +381,6 @@ header {
 .fa-github::after {  content: "Github"; }
 .fa-windows::after {  content: "Outlook"; }
 
-.fa-windows:hover::after,
-.fa-linkedin:hover::after,
-.fa-github:hover::after { opacity: 1; }
-
 .icon svg   { fill:#fff; }
 .icon:hover { background-color: unset; }
 
@@ -398,7 +388,7 @@ header {
 .fa-linkedin { background-color: #0a66c2; }
 .fa-github   { background-color: #111; }
 
-.footer-text { margin-top: 3rem; }
+.footer-text { margin-top: 5rem; }
 
 /*-----Back to Top Button-----*/
 
