--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@
   --text-primary:#121212;
   --theme-blue: #40aabd;
   --theme-red: #CE4646; /*#e65656 - original color, not enough contrast*/
-  --bg-primary: #292F36;
+  --bg-primary: #313638;
 }
 
 /* remove default styles from everything */
@@ -20,11 +20,7 @@ body {
   overflow-x: hidden;
 }
 
-a { 
-  color:var(--theme-blue); 
-  text-decoration: none; 
-}
-a:hover { color:var(--theme-red); }
+a { text-decoration: none; }
 
 h1 { font-size:4rem; padding: 5rem 0; text-align: center; }
 h2 { font-size:2rem; }
@@ -65,7 +61,6 @@ h3 { font-size:1.2rem; }
   left: 4rem;
   background: var(--bg-primary);
   justify-content: center;
-  color:#fff;
   width: 130px;
   padding: .8rem;
   transition: all 400ms ease;
@@ -133,13 +128,6 @@ header h1 {
   width: 32vw;
 }
 
-.view-work-text {
-  display: flex;
-  gap: 10px;
-  font-size: 1.2rem;
-  width: fit-content;
-}
-
 .name-large { 
   font-size: 3rem;
   padding-inline: 10px;
@@ -160,6 +148,7 @@ header h1 {
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 20px;
   font-size: 1rem;
   font-weight: normal;
   width: 150px;
@@ -171,7 +160,7 @@ header h1 {
 
 .button:hover { 
   transform: scale(1.1);
-  box-shadow: 3px 3px 15px 0 #777;
+  box-shadow: 3px 3px 15px 0 #141414;
   color: white;
 }
 
@@ -180,9 +169,7 @@ header h1 {
 }
 
 .header-btn {
-  position: absolute;
-  top: 50px;
-  right: 50px;
+  margin-top: 3rem;
 }
 
 /*-----Projects section-----*/
@@ -193,27 +180,32 @@ header h1 {
 
 .projects-wrap {
   display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(500px, auto)) ;
   gap: 4rem;
+  max-width: 1700px;
+  min-width: 350px;
 }
 
 .project-card {
-  display: flex;
-  gap: 2rem;
   padding: 4rem;
-  min-width: 300px;
-  max-width: 1000px;
   transition: all 700ms cubic-bezier(.45,1.5,.67,.85);
   transform: translateY(80%);
   opacity: 0;
   overflow: hidden;
-  box-shadow: 4px 4px 15px 0 #ddd;
+  box-shadow: 4px 4px 15px 0 #6d6d6d;
   border-radius: 10px;
-  background: white;
+  background: var(--bg-primary);
+  color: #fff;
 }
 
-.project-card svg {
-  width: 140px;
-  color: var(--theme-red);
+.project-svg {
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  color: rgba(255, 255, 255, 0.123);
+  transform: rotate(-30deg);
+  top: -20px;
+  right: -20px;
 }
 
 .project-card .project-text {
@@ -225,6 +217,18 @@ header h1 {
 .project-card h2 { 
   line-height: 1.1;
   color: var(--theme-blue); 
+}
+
+.project-btns-wrap {
+  display: flex;
+  align-items: center;
+  gap: 3rem;
+}
+
+.project-btns-wrap svg {
+  width: 30px;
+  height: 30px;
+  fill: white;
 }
 
 /*-----Gallery section-----*/
