--- a/css/index.css
+++ b/css/index.css
@@ -31,6 +31,7 @@ h3 { font-size:1.2rem; }
 .navbar {
   pointer-events:all;
   position: fixed;
+  top: 0;
   background: var(--bg-primary);
   width: 5rem;
   height: 100vh;
