--- a/css/index.css
+++ b/css/index.css
@@ -195,7 +195,6 @@ header h1 {
   grid-template-columns: repeat(auto-fill, minmax(500px, auto)) ;
   gap: 4rem;
   max-width: 1700px;
-  min-width: 350px;
 }
 
 .project-card {
@@ -331,12 +330,18 @@ header h1 {
 
 .icon {
   position: relative;
-  width: 100px;
-  height: 100px;
-  display: block;
+  width: 130px;
+  height: 130px;
+  display: grid;
   color:white;
-  padding: 2rem;
+  justify-content: center;
+  align-items: center;
   transition: background 200ms ease-in-out;
+}
+
+.icon svg {
+  width: 50px;
+  height: 50px;
 }
 
 .fa-github::after, .fa-linkedin::after, .fa-windows::after {
