--- a/css/media-small.css
+++ b/css/media-small.css
@@ -23,11 +23,6 @@
 
   h1 { font-size: 3rem; }
 
-  body, html {
-    width: -webkit-fill-available;
-    height: -webkit-fill-available;
-  }
-
   header { 
     margin-left: 0px; 
     text-align: center;
@@ -161,7 +156,12 @@
 
 @media only screen and (max-width: 500px){
   .icon {
-    width: 90px;
-    height: 90px;
+    width: 70px;
+    height: 70px;
+  }
+
+  .icon svg {
+    width: 30px;
+    height: 30px;
   }
 }
